SonarLint improvements